fixed style on newest plantings so first item is not missaligned

--- a/ui2022/src/app/pages/project-page/components/project-carousel-item/project-carousel-item.component.scss
+++ b/ui2022/src/app/pages/project-page/components/project-carousel-item/project-carousel-item.component.scss
@@ -13,6 +13,6 @@
 .image {
   overflow: hidden;
   border-radius: 2rem;
-  width: 4rem;
-  height: 4rem;
+  width: 4rem!important;
+  height: 4rem!important;
 }
